@@ -1,4 +1,4 @@
-DIST zattoo-3.1.0.11060-i386.tgz 5921463 RMD160 13a24d066d46fa5160628ecb782312ac114e5bca SHA1 4f09df1c66f8921dbc980cd9dd0ff437639510e3 SHA256 acb8f42bcc245b27260d96d7b056bcade39dd761597e8e579be3a1c44fb28a52
-EBUILD zattoo-bin-3.1.0.11060.ebuild 1687 RMD160 76b5da94cd2452879c858c5200c929f38f23dde3 SHA1 8bbd9109454cb4ec106146044e5325300ea66473 SHA256 c5a21b967c81c1173a7d441600e567d7e2ce19f6ee1564387983d9dd4717ef20
-MISC ChangeLog 1833 RMD160 d9a2ac469cbe748d7ebc323bfb914ec2a37ab0f4 SHA1 7b8fb711a25a5139ee8cccd20142f1f8c72fc449 SHA256 b0f1f32d0e8befd823e5bf0c53c6a83aea5ac1eda7dc1bf8023a42b01e8b4817
+DIST zattoo-3.3.0.17284-i386.tgz 2265427 RMD160 7d27d51eb31b2725ca677b83e2769f916af7f30f SHA1 b9aacaba933e1672b01b18dc41bce34600336fc5 SHA256 437cdf0d9f447f485fba9ad54ba71c47e5f2bde2589457f797e9bb9566d0c4ee
+EBUILD zattoo-bin-3.3.0.17284.ebuild 1918 RMD160 e2ced10b65b39fdd54b92c052955d6189cdae2d3 SHA1 2796c02fe861367c95f3f122089749a6f29a1387 SHA256 01f454a805b3849381f766979c0edeb55321f654674317cd517471e3b0d14026
+MISC ChangeLog 2014 RMD160 085f2f3b71dda734308a886749824bbe1b5f160f SHA1 fada3afcd0d5d8278714b3a79985e0fb86ba77c9 SHA256 210d96ff229046b8387ed05d686a3356d6e46f22314e2f1ca26f7c313b135e44
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
